# Fire_detection

./: package.xml  setup.py
fire_detection/: fire_detection_node.py
launch/: fire_detection_launch.py
